feat(gql): add gql resolver for user and product
