# backend/domain/dto/user_dto.go
@@ -2,6 +2,8 @@ package dto
 
 import (
 	"backend/domain/enum"
+	"backend/domain/model"
+	"errors"
 	"time"
 )
 
@@ -53,4 +55,56 @@ type DeleteUserRespData struct {
 	Email     string    `json:"email"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type GetUserListReq struct {
+	Query     *string `form:"query" binding:"omitempty"`
+	QueryBy   *string `form:"query_by" binding:"omitempty,oneof=username email role" default:"username"`
+	Page      *int    `form:"page" binding:"omitempty,gt=0" default:"1"`
+	Limit     *int    `form:"limit" binding:"omitempty,gt=0" default:"10"`
+	SortOrder *int    `form:"sort_order" binding:"omitempty,oneof=1 -1" default:"-1"`
+	SortBy    *string `form:"sort_by" binding:"omitempty,oneof=updated_at created_at username email role" default:"updated_at"`
+}
+
+type GetUserListRespData struct {
+	BasePaginationRespData
+	Data []model.UserModel `json:"data"`
+}
+
+type UserRepo_GetListParams struct {
+	Query     *string
+	QueryBy   *string
+	Page      *int
+	Limit     *int
+	SortOrder *int    `default:"-1"`
+	SortBy    *string `default:"updated_at"`
+	DoCount   bool
+}
+
+func (dto *UserRepo_GetListParams) Validate() error {
+	if dto.QueryBy != nil {
+		if *dto.QueryBy != "username" &&
+			*dto.QueryBy != "email" &&
+			*dto.QueryBy != "role" {
+			return errors.New("invalid query by")
+		}
+	}
+
+	if dto.SortBy != nil {
+		if *dto.SortBy != "updated_at" &&
+			*dto.SortBy != "created_at" &&
+			*dto.SortBy != "username" &&
+			*dto.SortBy != "email" &&
+			*dto.SortBy != "role" {
+			return errors.New("invalid sort by")
+		}
+	}
+
+	if dto.SortOrder != nil {
+		if *dto.SortOrder != 1 && *dto.SortOrder != -1 {
+			return errors.New("invalid sort order")
+		}
+	}
+
+	return nil
 }
